# gradr

./: LICENSE.txt  README.md  pyproject.toml
src/gradr/: __main__.py
src/gradr/cli/: __init__.py
